--- a/script.ipynb
+++ b/script.ipynb
@@ -34,9 +34,9 @@
     "        return None\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    organization_name = \"pwc-gx-ifs-ngc\"\n",
-    "    repository_name = \"ngc-canvas-helm\"\n",
-    "    github_access_token = \"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\"\n",
+    "    organization_name = \"<ORG_NAME>\"\n",
+    "    repository_name = \"<REPO Name>\"\n",
+    "    github_access_token = \"<PAT>\"\n",
     "    \n",
     "    repo_data = fetch_repository_json(organization_name, repository_name, github_access_token)\n",
     "    \n",
